--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "ember-cli-bootstrap": "0.0.12"
   }
 }
